[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/godot_yarn_spinner/demo/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/godot_yarn_spinner/demo/menu_section_9patch.png" type="Texture" id=2]
[ext_resource path="res://addons/godot_yarn_spinner/demo/simple_test.yarn" type="Script" id=3]
[ext_resource path="res://addons/godot_yarn_spinner/demo/DialogBox.gd" type="Script" id=4]
[ext_resource path="res://addons/godot_yarn_spinner/demo/DialogText_Label.gd" type="Script" id=5]
[ext_resource path="res://addons/godot_yarn_spinner/demo/sweet_tooth_cake.png" type="Texture" id=6]
[ext_resource path="res://addons/godot_yarn_spinner/demo/OptionsList.gd" type="Script" id=7]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="GDScript" id=4]
script/source = "extends ItemList



func _ready():
	connect(\"item_selected\", self, \"run\")
	var text = \"Use our generator to get your own, \\nor read on for the authoritative history of lorem ipsum.\"
	print(text)
	add_item(text)
	self.set_item_disabled(1, true)

func run(index):
	print(\"item selected: \", index)
"

[sub_resource type="DynamicFont" id=5]
size = 74
outline_size = 5
outline_color = Color( 1, 0.992157, 0.513726, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 1 )

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="OptionsMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -412.0
margin_right = 448.0
margin_bottom = 228.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_Control" type="Control" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_top = 20.0
margin_right = -100.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box_Rect9" type="NinePatchRect" parent="Dialog_Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialog_Control/Box_Rect9"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText_Label" type="RichTextLabel" parent="Dialog_Control/Box_Rect9/MarginContainer"]
margin_right = 720.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Blah blah blah"
text = "Blah blah blah"
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog_Control/Box_Rect9/MarginContainer/DialogText_Label"]

[node name="Bottom Box" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -165.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Bottom Box"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="Bottom Box/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 305.0
margin_top = 10.0
margin_right = -22.0
margin_bottom = -10.0
theme = SubResource( 7 )
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Bottom Box/NinePatchRect/NinePatchRect2"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 45.0
text = "Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Bottom Box/NinePatchRect/NinePatchRect2"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = 90.0
text = "Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum."
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Bottom Box/NinePatchRect/NinePatchRect2"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 100.0
margin_right = -10.0
margin_bottom = 135.0
text = "Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Bottom Box/NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 306.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -15.0
items = [ "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", null, false, "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.", null, true, "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.", null, false ]
max_text_lines = 2
same_column_width = true
fixed_column_width = 511
icon_mode = 0
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Bottom Box/NinePatchRect"]
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = 279.0
margin_bottom = -15.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="Bottom Box/NinePatchRect/NinePatchRect"]
margin_right = 254.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "20:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="YarnStory" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.607
margin_top = -290.423
margin_right = 350.393
margin_bottom = 267.577
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheEnd" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TheEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -49.0
margin_right = 190.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 3 )
text = "It's Over!"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="select_option" from="OptionsMenu" to="." method="_on_select_option"]
[connection signal="line_complete" from="Dialog_Control/Box_Rect9/MarginContainer/DialogText_Label" to="." method="_on_DialogText_Label_line_complete"]
[connection signal="timeout" from="Timer" to="Dialog_Control/Box_Rect9/MarginContainer/DialogText_Label" method="_on_Timer_timeout"]
[connection signal="command" from="YarnStory" to="." method="_on_YarnStory_command"]
[connection signal="dialogue" from="YarnStory" to="." method="_on_YarnStory_dialogue"]
[connection signal="dialogue" from="YarnStory" to="Dialog_Control/Box_Rect9/MarginContainer/DialogText_Label" method="_on_YarnStory_dialogue"]
[connection signal="options" from="YarnStory" to="." method="_on_YarnStory_options"]
[connection signal="options" from="YarnStory" to="OptionsMenu" method="_on_YarnStory_options"]
